# anri

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.unused  Makefile  README.md  RELEASE_PROCESS.md  coverage.xml  pyproject.toml  requirements.yaml  ruff.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: main.yml  pr_checks.yml  setup.yml
anri/: __init__.py  version.py
anri/crystal/: __init__.py
anri/diffract/: __init__.py
anri/diffraction/: __init__.py  _scattering.py
anri/fwd/: __init__.py
anri/geom/: __init__.py
anri/geometry/: __init__.py  _detector.py  _diffractometer.py  _utils.py
anri/sandbox/: ICSD_CollCode131_standard.cif  ICSD_CollCode43416.cif  ICSD_CollCode53807.cif  README.md  __init__.py  crystal.py  crystal_dd.py  graz_inc_merge_q.ipynb  img_loading.py  index.py  notes.txt  segmentation.py  speed.py  test_DCT_fwd.ipynb  test_DCT_fwd_beamdiv.ipynb  test_boxbeam_fwd_beamdiv.ipynb  test_boxbeam_grad.ipynb  test_boxbeam_refine.ipynb  test_crystal.ipynb  test_index.ipynb  test_index.ipynb.bak  test_jax_guvec.ipynb  test_kdtree.ipynb  test_loading.ipynb  test_medfield.ipynb  test_pbp_refine.ipynb  test_pbp_refine.py  test_scanning_fwd.ipynb  test_seg.ipynb  test_speed.ipynb  test_transform.ipynb  test_transform_2.ipynb  test_transform_back.ipynb  test_transform_function_by_function.ipynb  test_transform_to_cf.ipynb  test_vmap.ipynb  transform.py  transform_map_batch.py
docs/_templates/: custom-attribute-template.rst  custom-class-template.rst  custom-function-template.rst  custom-method-template.rst  notes.txt
docs/source/: CHANGELOG.rst  CONTRIBUTING.rst  conf.py  index.md  index.rst  installation.md
scripts/: prepare_changelog.py  release.sh  release_notes.py
tests/: __init__.py  hello_test.py
(+37 files in other folders)
